	PR go/79281

Force Lock and Note to be aligned to a 4 byte boundary.  This is
required by the kernel but is not enforced on m68k.

Patch by John Paul Adrian Glaubitz.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-6-branch@245109 138bc75d-0d04-0410-961f-82ee72b054a4